--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".ui.userAdd.AddUserActivity"></activity>
         <activity android:name=".ui.user.UserActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
